# metacontext

./: .gitignore  LICENSE  README.md
bird_demo/: Makefile  README.md  pyproject.toml
bird_demo/bird_demo/: __init__.py  demo.ipynb  demo.py  models.py
bird_demo/bird_demo/data/: birdos.csv  birdos_expanded.csv  birdos_locations.geojson  birdos_locations.gpkg  birdos_locations_metacontext.yaml  birdos_metacontext.yaml
bird_demo/bird_demo/input/: birdos_expanded.xlsx
bird_demo/bird_demo/output/: bird_classification_model_metacontext.yaml  buffered_locations.geojson  buffered_locations_metacontext.yaml  chat_log.md  csv.csv  csv_metacontext.yaml  eda_csv.csv  eda_csv_metacontext.yaml  filtered_locations.gpkg  filtered_locations_metacontext.yaml  pixel_bird_metacontext.yaml  processed_bird_data.csv  processed_bird_data_metacontext.yaml  xlsx.xlsx  xlsx_metacontext.yaml
bird_demo/bird_demo/output/companion/: bird_classification_model_metacontext.yaml  csv_metacontext.yaml  filtered_locations.gpkg  filtered_locations_metacontext.yaml  geospatial_gpkg.gpkg  geospatial_gpkg_metacontext.yaml  geospatial_raster_bird.tfw  geospatial_raster_bird.tif  geospatial_raster_bird_metacontext.yaml  media_png_metacontext.yaml  model_pkl_metacontext.yaml  pixel_bird_metacontext.yaml  tabular_csv.csv  tabular_csv_metacontext.yaml
bird_demo/bird_demo/output/llm_api/: bird_classification_model_metacontext.yaml  csv_metacontext.yaml  filtered_locations.gpkg  filtered_locations_metacontext.yaml  geospatial_gpkg.gpkg  geospatial_gpkg_metacontext.yaml  geospatial_raster_bird.tfw  geospatial_raster_bird_metacontext.yaml  media_png_metacontext.yaml  model_pkl.pkl  model_pkl_metacontext.yaml  pixel_bird_metacontext.yaml  tabular_csv_metacontext.yaml
bird_demo/bird_demo/scripts/: bird_image.py  exploratory_data_analysis.py  models.py  train_model.py
bird_demo/example/output/: pixel_bird_metacontext.yaml
metacontext/: Makefile  README.md  pyproject.toml  test_timing.py
metacontext/docs/: README.md  architecture_guides.md  developer_guide.md  implementation_guides.md  product_documentation.md  project_walkthrough.md  task_list.md  testing_guide.md
metacontext/src/: __init__.py  cli.py  metacontextualize.py
metacontext/src/ai/: __init__.py  codebase_scanner.py
metacontext/src/ai/handlers/: __init__.py
metacontext/src/ai/handlers/companions/: __init__.py  base_companion.py  codeium_provider.py  copilot_provider.py  cursor_provider.py  generic_provider.py  tabnine_provider.py
metacontext/src/ai/handlers/core/: __init__.py  exceptions.py  provider_config.py  provider_factory.py  provider_manager.py  provider_registry.py  token_tracker.py
metacontext/src/ai/handlers/llms/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  openai_provider.py.bak  provider_interface.py
metacontext/src/ai/prompts/: prompt_loader.py
metacontext/src/core/: context_utils.py  output_utils.py  registry.py
metacontext/src/handlers/: __init__.py  base.py  model.py  tabular.py
metacontext/src/inspectors/: __init__.py  file_inspector.py
metacontext/src/metacontext/: architecture_reference.py  cli.py  metacontextualize.py
metacontext/src/metacontext/ai/: __init__.py  code_evidence_extractor.py  codebase_scanner.py
metacontext/src/metacontext/core/: __init__.py  config.py  context_utils.py  copilot_integration.py  deterministic_utils.py  migration_guide.py  output_utils.py  registry.py  schema_template_generator.py  solution_summary.py  template_engine.py  unified_llm_integration.py
metacontext/src/metacontext/extensions/: __init__.py  geospatial.py
metacontext/src/metacontext/handlers/: base.py  geospatial.py  media.py  model.py  tabular.py
metacontext/src/metacontext/inspectors/: __init__.py  file_inspector.py
metacontext/src/metacontext/interfaces/: geospatial.py
metacontext/src/metacontext/schemas/: __init__.py
metacontext/src/schemas/: __init__.py
metacontext/src/schemas/core/: __init__.py  codebase.py  core.py  extension_factory.py  interfaces.py
metacontext/src/schemas/extensions/: base.py  geospatial.py  media.py  models.py  tabular.py
metacontext/tests/: __init__.py  test_llm_handler.py  test_metacontextualize.py  test_prompt_loader.py
(+76 files in other folders)
